syntax = "proto3";

package Backend;

option csharp_namespace = "Backend.Api";

service TenantService {
    rpc AddWidget(AddWidgetRequest) returns (EmptyResponse);
    rpc GetWidget(GetWidgetRequest) returns (GetWidgetResponse);
    rpc UpdateWidget(UpdateWidgetRequest) returns (EmptyResponse);
}

message AddWidgetRequest{
    string id = 1;
}

message EmptyResponse{
}

message GetWidgetRequest{
    string id = 1;
}

message GetWidgetResponse{
    string id = 1;
    string description = 2;
}
message UpdateWidgetRequest{
    string id = 1;
    string description = 2;
}